--- a/configuration/chirpstack-gateway-bridge/chirpstack-gateway-bridge.toml
+++ b/configuration/chirpstack-gateway-bridge/chirpstack-gateway-bridge.toml
@@ -1,8 +1,12 @@
 # See https://www.chirpstack.io/gateway-bridge/install/config/ for a full
 # configuration example and documentation.
-
+[backend]
+type="semtech_udp"
+[backend.semtech_udp]
+udp_bind = "0.0.0.0:1700"
+[backend.semtech_udp]
 [integration.mqtt.auth.generic]
-servers=["tcp://mosquitto:1883"]
+servers=["tcp://127.0.0.1:1883"]
 username=""
 password=""
 
